@@ -1,5 +1,10 @@
 2017-08-18  Gabriel F. T. Gomes  <gftg@linux.vnet.ibm.com>
 
+	* misc/sys/cdefs.h (__HAVE_GENERIC_SELECTION): Define to 0, if
+	in C++ mode.
+
+2017-08-18  Gabriel F. T. Gomes  <gftg@linux.vnet.ibm.com>
+
 	[BZ #21930]
 	* math/math.h (isinf): Check if in C or C++ mode before using
 	__builtin_types_compatible_p, since this is a C mode feature.
